--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,10 @@ androidx-core-ktx = "1.5.0"
 core-testing = "2.2.0"
 jetbrains-kotlin-android = "1.9.20"
 dagger-hilt-android = "2.48"
-core-ktx = "1.10.1"
+core-ktx = "1.12.0"
+junit-ktx = "1.1.5"
 kotlin-bom = "1.8.20"
+kotlinx-coroutines-test = "1.8.0-RC2"
 lifetime-runtime-ktx = "2.6.1"
 activity-compose = "1.7.2"
 compose-bom = "2023.06.01"
@@ -16,6 +18,7 @@ lifecycle-viewmodel-compose = "2.6.1"
 navigation-compose = "2.7.0-rc01"
 material-icons-extended = "1.4.3"
 hilt-navigation-compose = "1.1.0-alpha01"
+robolectric = "4.11.1"
 room-ktx = "2.6.0-alpha02"
 kotlinx-coroutines-core = "1.7.1"
 kotlin-ksp = "1.9.20-1.0.14"
@@ -25,10 +28,13 @@ ui-test-manifest = "1.5.4"
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 core-testing = { module = "androidx.arch.core:core-testing", version.ref = "core-testing" }
+junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "junit-ktx" }
 kotlin-bom = { group = "org.jetbrains.kotlin", name = "kotlin-bom", version.ref = "kotlin-bom" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifetime-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 test-core-ktx = { module = "androidx.test:core-ktx", version.ref = "androidx-core-ktx" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
